src/Exercises.css
.exercises {
    background-color: white;
    padding: 10px 100px;
    display: flex;
    justify-content: space-evenly;
    flex-flow: wrap;
    font-family: Verdana;
}

.exercises__box {
    text-align: center;
    border-radius: 10px;
    width: 200px;
    height: 180px;
    box-shadow: 0px 3px 9px 0px rgba(38, 103, 255, 0.3);
    padding: 10px;
    margin-top: 20px;
    transition: all 170ms ease-in-out;
}

.exercises__box:hover {
    transform: scale(1.06);
}

.exercises__box a {
    color: black;
    text-decoration: none;
}

.exercises__box a:hover {
    color: #3f8efc;
    text-decoration: none;
}

.exercises__box__bodies {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

